# whisper.cpp

./: GPU_ACCELERATION_SETUP.md  PERFORMANCE_COMPARISON.md  YDOTOOL.md  voice_typing_continuous.sh  voice_typing_shortcut.sh  voice_typing_single_shot.sh
examples/: CMakeLists.txt
examples/voice-typing/: CMakeLists.txt  README.md  TEXT_INJECTION_CHOICES.md  libei-text-input.cpp  libei-text-input.h  uinput-text-input.cpp  uinput-text-input.h  voice-typing.cpp
voice_typing_notes/: AUDIO_CAPTURE_COMPARISON.md  BACKSPACE_PROBLEM_ANALYSIS.md  METHODS.md  PROMPT_PERFORMANCE_ANALYSIS.md  WHISPER_STREAM_ANALYSIS.md  prompt-implementation-summary.md
